# Claude-Code-Usage-Monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  INSTALLATION.md  MANIFEST.in  Makefile  README.md  Rogers  Text  babel.cfg  ccusage_monitor.py  claude_monitor.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_encoding.py  test_restore_env.py  test_volume_fix.py  test_volume_validation.py
.github/workflows/: lint.yml  test.yml  tests.yml
doc/: i18n-developer-guide.md
scripts/: __init__.py  health-check.sh  health_check.sh  health_server.py  init-volumes.sh  setup-docker.ps1  setup-docker.sh  update_all_translations.py  update_translations.bat
src/claude_monitor/: _version.py  error_handling.py
src/claude_monitor/cli/: bootstrap.py  main.py
src/claude_monitor/core/: __init__.py  calculations.py  data_processors.py  models.py  p90_calculator.py  plans.py  pricing.py  settings.py
src/claude_monitor/data/: __init__.py  analysis.py  analyzer.py  reader.py
src/claude_monitor/i18n/: __init__.py  core.py  formatters.py
src/claude_monitor/monitoring/: __init__.py  data_manager.py  orchestrator.py  session_monitor.py
src/claude_monitor/terminal/: __init__.py  manager.py  themes.py
src/claude_monitor/ui/: __init__.py  components.py  display_controller.py  layouts.py  (+2 more)
src/scripts/: translate.py
src/tests/: conftest.py  run_tests.py  test_analysis.py  test_calculations.py  test_cli_main.py  test_data_reader.py  test_display_controller.py  test_docker.py  test_error_handling.py  test_formatting.py  test_i18n.py  test_monitoring_orchestrator.py  test_pricing.py  test_session_analyzer.py  test_settings.py  test_time_utils.py  test_timezone.py  test_version.py  test_wsl_integration.py  test_wsl_utils.py
tests/: __init__.py  conftest.py  test_calculator.py  test_docker_main.py  test_i18n.py  test_structure.py  validate_i18n_deployment.py  validate_i18n_system.py
tests/docker/: __init__.py  test_compose.py  test_dockerfile.py  test_edge_cases.py  test_entrypoint.py  test_health_system.py  test_integration.py
usage_analyzer/: api.py
usage_analyzer/core/: __init__.py  calculator.py  data_loader.py  identifier.py
usage_analyzer/i18n/: __init__.py  message_keys.py
usage_analyzer/models/: __init__.py  data_structures.py
usage_analyzer/output/: __init__.py  json_formatter.py
usage_analyzer/themes/: __init__.py  config.py  console.py  detector.py  themes.py
usage_analyzer/utils/: __init__.py  alignment.py  path_discovery.py  pricing_fetcher.py
(+16 files in other folders)
